# tonic-template

./: Cargo.toml  README.md  build.rs
protos/helloworld/: helloworld.proto
src/: client.rs  data.rs  server.rs
