[package]
name = "tonic-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the tonic-template gRPC server
name = "tonic-template-server"
path = "src/server.rs"

[[bin]] # Bin to run the tonic-template gRPC client
name = "tonic-template-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"