[package]
name = "tonic-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the tonic-template gRPC server
name = "tonic-template-server"
path = "src/server.rs"

[[bin]] # Bin to run the tonic-template gRPC client
name = "tonic-template-client"
path = "src/client.rs"

[dependencies]
async-stream = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
tonic = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"